--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    height: 400vh;
 }
 
 * {
@@ -30,6 +31,8 @@ i::after {
 .navbar-mainbg {
     background-color: #fff;
     padding: 0px;
+    position: sticky;
+    top: 0px;
 }
 
 #navbarSupportedContent {
@@ -258,7 +261,7 @@ i::after {
     color: #000;
 }
 
-.body .form input {
+.overlay input {
     display: block;
     padding: 10px;
     margin: 25px 10px;
@@ -289,10 +292,115 @@ i::after {
     border: none;
     color: white;
     cursor: pointer;
+    transition: all 0.1s linear 0s;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 3px #E9E4D4;
+    -moz-box-shadow: 0 3px #E9E4D4;
+    box-shadow: 0 3px #E9E4D4;
+}
+
+.footer button:hover {
+    background: #36454F;
+    top: 3px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+
+/*----------register------------*/
+
+.overlay-register {
+    position: relative;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    z-index: 100;
+}
+
+.overlay-register.open {
+    display: flex;
+    animation: show-overlay 0.5s;
+}
+
+.overlay-register input {
+    display: block;
+    padding: 5px;
+    margin: 10px 10px;
+    outline: none;
+    border: solid #000 1px;
+    color: #000;
     transition: 0.4s;
     border-radius: 4px;
 }
 
-.footer button:hover {
-    background: #534bae;
+@keyframes show-overlay {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.register {
+    padding: 20px 25px;
+    background: white;
+    border-radius: 10px;
+}
+
+.gender {
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
+input[type=radio] {
+    visibility: hidden;
+}
+
+label.radio {
+    cursor: pointer;
+    text-indent: 35px;
+    overflow: visible;
+    display: inline-block;
+    position: relative;
+    margin-bottom: 2px;
+}
+
+label.radio:before {
+    background: #000;
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+}
+
+label.radio:after {
+    opacity: 0;
+    content: '';
+    position: absolute;
+    width: 0.6em;
+    height: 0.35em;
+    background: transparent;
+    top: 8.0px;
+    left: 5.0px;
+    border: 3px solid #ffffff;
+    border-top: none;
+    border-right: none;
+
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+input[type=radio]:checked+label:after {
+    opacity: 1;
 }
