--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -310,11 +310,11 @@ i::after {
 /*----------register------------*/
 
 .overlay-register {
-    position: relative;
+    position: fixed;
     display: none;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
     width: 100%;
     background: rgba(0, 0, 0, 0.2);
     z-index: 100;
